Update tab templates with spacing classes

--- a/gui/app/templates/_channel-rewards.html
+++ b/gui/app/templates/_channel-rewards.html
@@ -25,13 +25,13 @@
     </button>
   </fb-item-table-toolbar>
   <fb-item-table-footer>
-    <div style="padding: 15px; display: flex; align-items: center">
+    <div class="p-6" style="display: flex; align-items: center">
       <div style="flex-shrink: 0; display: flex; align-items: center">
         <span
           >Reward Limit
           <tooltip text="'Twitch limits channels to 50 total channel rewards.'"
         /></span>
-        <span style="font-size: 20px; margin: 0 10px">
+        <span class="my-0 mx-4" style="font-size: 20px;">
           {{channelRewardsService.channelRewards.length}} / 50
         </span>
       </div>
