--- a/gui/app/templates/viewers/_viewers.html
+++ b/gui/app/templates/viewers/_viewers.html
@@ -1,9 +1,9 @@
 <div style="min-width: 800px">
-  <div style="padding: 15px">
+  <div class="p-6">
     <div>
       <div
+        class="mt-0 mb-10 mx-0"
         style="
-          margin: 0 0 25px;
           display: flex;
           flex-direction: row;
           justify-content: space-between;
