--- a/gui/app/templates/_effect-queues.html
+++ b/gui/app/templates/_effect-queues.html
@@ -1,15 +1,15 @@
 <scroll-sentinel element-class="effect-queue-header"></scroll-sentinel>
-<div style="padding: 15px;">
-    <button ng-click="addOrEditQueue()" class="btn btn-primary hvr-icon-grow" style="margin-bottom: 15px;">
-        <i class="fas fa-plus-circle hvr-icon" style="margin-right:5px;"></i> New Effect Queue
+<div class="p-6">
+    <button ng-click="addOrEditQueue()" class="btn btn-primary hvr-icon-grow mb-6">
+        <i class="fas fa-plus-circle hvr-icon mr-2"></i> New Effect Queue
     </button>
-    <div ng-if="eqs.getEffectQueues().length === 0" class="noselect muted" style="padding-left: 13px">
-        <span class="hvr-bob"><i class="fas fa-arrow-up"></i></span><span style="margin-left:8px">No effect queues saved. You should make one! :) </span>
+    <div ng-if="eqs.getEffectQueues().length === 0" class="noselect muted pl-5">
+        <span class="hvr-bob"><i class="fas fa-arrow-up"></i></span><span class="ml-3">No effect queues saved. You should make one! :) </span>
     </div>
     <table ng-show="eqs.getEffectQueues().length > 0" class="fb-table">
         <thead>
             <tr style="font-size: 11px;">
-                <th class="muted" style="padding-left: 10px;"><i class="fas fa-tag"></i> NAME</th>
+                <th class="muted pl-4"><i class="fas fa-tag"></i> NAME</th>
                 <th class="muted"><i class="fas fa-bring-forward"></i> MODE</th>
                 <th class="muted"><i class="fas fa-clock"></i> INTERVAL</th>
                 <th></th>
@@ -17,7 +17,7 @@
         </thead>
         <tbody>
             <tr ng-repeat="queue in eqs.getEffectQueues() track by queue.id">
-                <td class="command-trigger-cell" style="padding-left: 10px;">
+                <td class="command-trigger-cell pl-4">
                     <span class="trigger">{{queue.name}}</span>
                 </td>
                 <td>
