--- a/gui/app/templates/_hotkeys.html
+++ b/gui/app/templates/_hotkeys.html
@@ -1,10 +1,10 @@
-<div style="margin-bottom: 10px">
-    <button class="btn btn-primary" ng-click="openAddOrEditHotkeyModal()"><i class="fas fa-plus-circle" style="margin-right:5px;"></i> New Hotkey</button>
+<div class="mb-4">
+    <button class="btn btn-primary" ng-click="openAddOrEditHotkeyModal()"><i class="fas fa-plus-circle" class="mr-2"></i> New Hotkey</button>
 </div>
 
 
-<div style="margin-top:20px;display:flex;flex-wrap: wrap;">
-    <div ng-repeat="hotkey in getHotkeys() track by $index" class="fb-tile mint centered" ng-class="{'inactive' : !hotkey.active}" style="margin-right: 10px;flex: 0 0 auto;width:250px;height:150px;">
+<div class="mt-8" style="display: flex;flex-wrap: wrap;">
+    <div ng-repeat="hotkey in getHotkeys() track by $index" class="fb-tile mint centered mr-4" ng-class="{'inactive' : !hotkey.active}" style="flex: 0 0 auto;width:250px;height:150px;">
         <div class="edit-btn" ng-click="openAddOrEditHotkeyModal(hotkey)"></div>
         <div class="header">
             <div class="title edit-btn-spacer">
@@ -20,7 +20,7 @@
         </div>
         </div>
     </div>
-    <div ng-if="getHotkeys().length < 1" class="noselect muted" style="padding-left: 13px">
-        <span class="hvr-bob"><i class="fas fa-arrow-up"></i></span><span style="margin-left:8px">No hotkeys saved. You should make one! :) </span>
+    <div ng-if="getHotkeys().length < 1" class="noselect muted pl-5">
+        <span class="hvr-bob"><i class="fas fa-arrow-up"></i></span><span class="ml-3">No hotkeys saved. You should make one! :) </span>
     </div>
 </div>
