--- a/gui/app/templates/_moderation.html
+++ b/gui/app/templates/_moderation.html
@@ -1,13 +1,13 @@
 <div style="min-width: 500px;">
-    <div style="padding: 15px;">
+    <div class="p-6">
       <div class="content-block moderation-feature-block">
         <div class="content-block-body">
           <div style="font-weight: 600;font-size: 20px;">Exempt Roles <tooltip text="'These roles are exempt from all Moderation features.'" /></div>
 
-          <div style="margin-top: 15px">
+          <div class="mt-6">
             <div class="role-bar" ng-repeat="role in getExemptRoles() track by role.id">
               <span>{{role.name}}</span>
-              <span class="clickable" style="padding-left: 10px;" ng-click="removeExemptRole(role.id)" uib-tooltip="Remove role" tooltip-append-to-body="true">
+              <span class="clickable pl-4" ng-click="removeExemptRole(role.id)" uib-tooltip="Remove role" tooltip-append-to-body="true">
                 <i class="far fa-times"></i>
               </span>
             </div>
@@ -31,8 +31,8 @@
               />
             </div>
           </div>
-          <div style="margin-top: 15px" ng-show="cms.chatModerationData.settings.bannedWordList.enabled">
-            <div id="roles" class="modal-subheader" style="padding: 0 0 4px 0">
+          <div class="mt-6" ng-show="cms.chatModerationData.settings.bannedWordList.enabled">
+            <div id="roles" class="modal-subheader pb-1.5 pt-0 px-0">
                 Words
             </div>
             <button ng-click="showEditBannedWordsModal()" class="btn btn-default">Edit Word List</button>
@@ -53,7 +53,7 @@
               />
             </div>
           </div>
-          <div style="margin-top: 15px" ng-show="cms.chatModerationData.settings.emoteLimit.enabled">
+          <div class="mt-6" ng-show="cms.chatModerationData.settings.emoteLimit.enabled">
             <firebot-input
               input-title="Max Per Message"
               placeholder-text="Enter number"
@@ -78,12 +78,11 @@
               />
             </div>
           </div>
-          <div class="muted" style="margin-bottom: 15px;">
+          <div class="muted mb-6">
             A !permit command is automatically added to System Commands.
           </div>
           <div
-            style="margin-top: 15px; margin-left: 15px;"
-            class="title-toggle-button-container"
+            class="title-toggle-button-container mt-6 ml-6"
             ng-show="cms.chatModerationData.settings.urlModeration.enabled"
           >
             <div class="moderation-feature-subtitle" ng-class="{ muted: !cms.chatModerationData.settings.urlModeration.viewTime.enabled }">View Time</div>
@@ -96,10 +95,11 @@
               />
             </div>
             <div
-              style="margin-top: 15px; width: 100%;"
+              style="width: 100%;"
+              class="mt-6"
               ng-show="cms.chatModerationData.settings.urlModeration.enabled && cms.chatModerationData.settings.urlModeration.viewTime.enabled"
             >
-              <div class="muted" style="margin-bottom: 10px; margin-left: 15px;">All viewers with a higher view time will be exempt from url moderation.</div>
+              <div class="muted mb-4 ml-6">All viewers with a higher view time will be exempt from url moderation.</div>
               <firebot-input
                 input-title="View time in hours"
                 placeholder-text="Enter amount of hours"
@@ -111,11 +111,12 @@
             </div>
           </div>
           <div
-              style="margin-top: 20px; width: 100%;"
+              style="width: 100%;"
+              class="mt-8"
               ng-show="cms.chatModerationData.settings.urlModeration.enabled"
             >
             <div class="muted">The chat message shown when a message containing a url is moderated (leave empty for no message).</div>
-              <div class="muted" style="margin-bottom: 10px; font-weight: 800;">
+              <div class="muted mb-4" style="font-weight: 800;">
                 Variables: {userName}<span ng-show="cms.chatModerationData.settings.urlModeration.viewTime.enabled">, {viewTime}</span>
               </div>
               <firebot-input
