Fix text wrapping in chat feed alerts

--- a/gui/scss/core/_chat.scss
+++ b/gui/scss/core/_chat.scss
@@ -47,6 +47,10 @@
     padding-left: 10px;
     background: rgb(49, 49, 49);
     border-top: 1px solid #29292988;
+
+    span {
+        word-break: break-word;
+    }
 }
 
 .chat-message {
