Fix the helper scss import

--- a/gui/scss/core/_$importer.scss
+++ b/gui/scss/core/_$importer.scss
@@ -6,6 +6,7 @@
 
 // Custom
 @import 'global';
+@import 'helpers';
 @import 'firebot-item-table';
 @import 'groups';
 @import 'moderation';
@@ -19,4 +20,3 @@
 @import 'bootstrap-overrides';
 @import 'title-bar';
 @import 'modals';
-@import 'spacing';
