--- a/gui/app/templates/viewers/_viewers.html
+++ b/gui/app/templates/viewers/_viewers.html
@@ -1,33 +1,14 @@
-<div style="min-width: 800px">
-  <div class="p-6">
-    <div>
-      <div
-        class="mt-0 mb-10 mx-0"
-        style="
-          display: flex;
-          flex-direction: row;
-          justify-content: space-between;
-        "
-      >
-        <button ng-click="vs.updateViewers()" class="btn btn-primary">
-          <i class="far fa-sync"></i> Refresh
-        </button>
-        <div
-          style="
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-          "
-        >
-          <searchbar
-            placeholder-text="Search Firebot viewers..."
-            query="viewerSearch"
-            style="flex-basis: 250px"
-          ></searchbar>
-          <!--<button ng-click="showViewerSearchModal();" class="btn btn-default" style="margin-left: 15px;"><i class="far fa-search"></i> Search Mixer</button>-->
-        </div>
-      </div>
-      <sortable-table
+<div class="p-6 mx-0 my-6" style="display: flex;flex-direction: row;justify-content: space-between;">
+    <button ng-click="vs.updateViewers()" class="btn btn-primary">
+        <i class="far fa-sync"></i> Refresh
+    </button>
+    <div style="display: flex; flex-direction: row; justify-content: space-between;">
+        <searchbar placeholder-text="Search Firebot viewers..." query="viewerSearch" style="flex-basis: 250px"></searchbar>
+    </div>
+</div>
+
+<div class="p-6">
+    <sortable-table
         table-data-set="vs.viewers"
         headers="headers"
         query="viewerSearch"
@@ -37,8 +18,6 @@
         starting-sort-field="username"
         no-data-message="No viewer data available yet!"
         page-size="viewerTablePageSize"
-      >
-      </sortable-table>
-    </div>
-  </div>
+    >
+    </sortable-table>
 </div>
