--- a/gui/app/templates/_counters.html
+++ b/gui/app/templates/_counters.html
@@ -6,9 +6,10 @@
     <div ng-repeat="counter in countersService.counters track by counter.id" class="fb-tile light-blue centered mr-4" style="flex: 0 0 auto;width:250px;height:150px;">
         <div uib-dropdown uib-dropdown-toggle style="display:flex;flex-direction: column; position: absolute;top: 5px; right: 5px;">
             <div class="edit-btn" style="position: unset;"></div>
-            <ul class="dropdown-menu" uib-dropdown-menu>
-                <li><a href ng-click="openEditCounterModal(counter)"><i class="fal fa-edit"></i> Edit</a></li>
-                <li><a href ng-click="openRenameCounterModal(counter)"><i class="fal fa-tag"></i> Rename</a></li>
+            <ul role="menu" class="dropdown-menu" uib-dropdown-menu>
+                <li><a href ng-click="openEditCounterModal(counter)" role="menuitem"><i class="fal fa-edit"></i> Edit</a></li>
+                <li><a href ng-click="openRenameCounterModal(counter)" role="menuitem"><i class="fal fa-tag"></i> Rename</a></li>
+                <li><a href ng-click="openDeleteCounterModal(counter)" role="menuitem" style="color: #fb7373;"><i class="far fa-trash-alt"></i> Delete</a></li>
             </ul>
         </div>
         <div class="header">
