--- a/gui/scss/core/_helpers.scss
+++ b/gui/scss/core/_helpers.scss
@@ -79,7 +79,7 @@
 }
 
 @mixin spacing($props) {
-    @include options($props, "px", "1px");
+    @include options($props, "px", 1px);
     @include options($props, 0\.5, value(0.5));
     @include options($props, 1\.5, value(1.5));
     @include options($props, 2\.5, value(2.5));
