Improve menu keyboard accessibility

--- a/gui/app/templates/live-events/_events.html
+++ b/gui/app/templates/live-events/_events.html
@@ -296,13 +296,13 @@
                   </td>
                   <td>
                     <div style="text-align: right; margin-left: auto">
-                      <span
-                        class="noselect clickable"
-                        style="font-size: 30px"
+                      <button
+                        class="noselect clickable text-5xl"
+                        style="background: transparent;border: none;"
                         context-menu="eventMenuOptions(event)"
                         context-menu-on="click"
                         ><i class="fal fa-ellipsis-h"></i
-                      ></span>
+                      ></button>
                     </div>
                   </td>
                 </tr>
