--- a/gui/scss/core/_firebot-item-table.scss
+++ b/gui/scss/core/_firebot-item-table.scss
@@ -67,8 +67,9 @@
         div {
             text-align: right;
 
-            span {
-                font-size: 30px;
+            button {
+                background: transparent;
+                border: none;
             }
         }
     }
