--- a/gui/app/templates/chat/_commands.html
+++ b/gui/app/templates/chat/_commands.html
@@ -206,13 +206,13 @@
                     <i class="fal fa-bars" aria-hidden="true"></i>
                   </span>
                   <div style="text-align: right; margin-left: auto">
-                    <span
-                      class="noselect clickable"
-                      style="font-size: 30px"
+                    <button
+                      class="noselect clickable text-5xl"
+                      style="background: transparent;border: none;"
                       context-menu="commandMenuOptions()"
                       context-menu-on="click"
                       ><i class="fal fa-ellipsis-h"></i
-                    ></span>
+                    ></button>
                   </div>
                 </div>
               </td>
