--- a/gui/scss/core/_controls.scss
+++ b/gui/scss/core/_controls.scss
@@ -813,31 +813,30 @@ table.fb-table-alt {
 
     .sort-tag {
         display: flex;
-        margin-right: 5px;
 
         span {
             background: $sort-tags-bg;
-            margin-bottom: 1px;
             font-size: 10px;
             line-height: 1.8;
-        }
-
-        span:first-child {
             border-radius: 15px 0 0 15px;
             padding: 1px 0 1px 8px;
         }
 
-        span:last-child {
+        button {
+            background: $sort-tags-bg;
+            border: none;
             border-radius: 0 15px 15px 0;
+            font-size: 10px;
+            line-height: 1.8;
             padding: 2px 8px 1px 7px;
         }
     }
 
     .sort-tag-add {
+        border: none;
         border-radius: 15px;
         padding: 2px 7px 1px 7px;
         background: $sort-tags-bg;
-        margin-bottom: 1px;
         font-size: 10px;
         line-height: 1.8;
     }
