Fix main menu accessibility

--- a/gui/scss/core/_global.scss
+++ b/gui/scss/core/_global.scss
@@ -278,6 +278,10 @@ body {
     width: 0px;
     background: transparent;
   }
+
+  li {
+    list-style-type: none;
+  }
 }
 
 .fb-nav-link-category {
