--- a/gui/app/templates/chat/_chat-messages.html
+++ b/gui/app/templates/chat/_chat-messages.html
@@ -77,7 +77,7 @@
         class="chat-window"
         ng-init="scrollGlued = true"
         scroll-glue="scrollGlued"
-        ng-style="{{customFontSizeStyle}}"
+        style="{{customFontSizeStyle}}"
       >
         <div
           ng-repeat="chatItem in cms.chatQueue | limitTo:messageDisplayLimit track by chatItem.id"
@@ -93,7 +93,9 @@
             hide-deleted-messages="hideDeletedMessages"
             show-avatar="showAvatars"
             show-timestamp="showTimestamps"
-            show-third-party-emotes="showThirdPartyEmotes"
+            show-bttv-emotes="showBttvEmotes"
+            show-ffz-emotes="showFfzEmotes"
+            show-seven-tv-emotes="showSevenTvEmotes"
             show-pronoun="showPronouns"
             update-chat-input="updateChatInput(text)"
             chat-size-style="{{customFontSizeStyle}}"
