Add visibility settings for quick actions

--- a/gui/scss/core/_chat.scss
+++ b/gui/scss/core/_chat.scss
@@ -311,6 +311,11 @@
             background: #53545b;
         }
     }
+
+    hr {
+        border-top: 1px solid #53545b;
+        width: 35px;
+    }
 }
 
 .text-input-wrapper {
