--- a/gui/app/templates/chat/_chat-messages.html
+++ b/gui/app/templates/chat/_chat-messages.html
@@ -1,42 +1,5 @@
 <div class="chat-tab-content">
-  <div class="quick-actions-column">
-    <button
-      class="quick-action-btn"
-      ng-click="showEditStreamInfoModal()"
-      uib-tooltip="Edit Stream Info"
-      append-tooltip-to-body="true"
-      tooltip-placement="right"
-      aria-label="Edit Stream Info"
-    >
-      <i class="far fa-pencil"></i>
-    </button>
-
-    <button
-      class="quick-action-btn mt-4"
-      uib-tooltip="Give Currency"
-      append-tooltip-to-body="true"
-      tooltip-placement="right"
-      ng-click="showGiveCurrencyModal();"
-      aria-label="Give Currency"
-    >
-      <i class="far fa-coins"></i>
-    </button>
-
-    <button
-      class="quick-action-btn mt-4"
-      uib-tooltip="Open Stream Preview"
-      append-tooltip-to-body="true"
-      tooltip-placement="right"
-      ng-click="popoutStreamPreview()"
-      aria-label="Open Stream Preview"
-    >
-      <i class="far fa-tv-alt"></i>
-    </button>
-
-
-
-
-  </div>
+  <quick-actions></quick-actions>
 
   <div class="viewer-list-column" ng-show="getChatViewerListSetting()">
     <div class="viewer-list-header">
