--- a/gui/scss/core/_chat.scss
+++ b/gui/scss/core/_chat.scss
@@ -360,8 +360,41 @@
     border-radius: 4px;
     transform: translateY(-8px);
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.33);
-    max-height: 300px;
-    overflow-y: auto;
+    & .tip {
+        padding: 5px 10px;
+        opacity: 0.8;
+        font-size: 13px;
+    }
+    & .completions {
+        max-height: 300px;
+        overflow-y: auto;
+        .autocomplete-menu-item {
+            padding: 10px;
+            display: flex;
+            &:hover {
+                background: #3f4148;
+                cursor: pointer;
+            }
+            &.selected {
+                background: #2f3136;
+            }
+            .item-image {
+                width: 28px;
+                height: 28px;
+                margin-right: 10px;
+                img {
+                    width: 100%;
+                }
+            }
+            .item-display {
+                font-size: 15px;
+            }
+            .item-description {
+                opacity: 0.8;
+                font-size: 13.5px;
+            }
+        }
+    }
     &.below {
         top: 36px;
     }
@@ -372,31 +405,6 @@
     &.under {
         bottom: -307px;
         top: unset;
-    }
-    .autocomplete-menu-item {
-        padding: 10px;
-        display: flex;
-        &:hover {
-            background: #3f4148;
-            cursor: pointer;
-        }
-        &.selected {
-            background: #2f3136;
-        }
-        .item-image {
-            width: 28px;
-            height: 28px;
-            margin-right: 10px;
-            img {
-                width: 100%;
-            }
-        }
-        .item-display {
-            font-size: 15px;
-        }
-        .item-description {
-            opacity: 0.8;
-        }
     }
 }
 
