--- a/gui/app/templates/chat/_chat-messages.html
+++ b/gui/app/templates/chat/_chat-messages.html
@@ -1,5 +1,5 @@
 <div class="chat-tab-content">
-  <quick-actions></quick-actions>
+  <quick-actions class="quick-actions-column flex flex-col"></quick-actions>
 
   <div class="viewer-list-column" ng-show="getChatViewerListSetting()">
     <div class="viewer-list-header">
