--- a/gui/scss/core/_chat.scss
+++ b/gui/scss/core/_chat.scss
@@ -15,9 +15,12 @@
 .chat-tab-content {
     width: 100%;
     height: 100%;
-    display: flex;
-    flex-direction: row;
     position: relative;
+
+    quick-actions,
+    > div {
+        float: left;
+    }
 }
 
 .chat-item {
@@ -291,15 +294,21 @@
 }
 
 .quick-actions-column {
-    width: 50px;
     background: $light-background-color;
     border-right: 2px solid $light-background-border;
     height: 100%;
-    flex-shrink: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 8px;
+    width: 5%;
+
+    .quick-actions {
+        width: 100%;
+        height: 80%;
+    }
+
+    hr {
+        border-top: 1px solid #53545b;
+        width: 35px;
+    }
+
     .quick-action-btn {
         width: 35px;
         height: 35px;
@@ -308,17 +317,12 @@
         background: $activity-bg-color;
         align-items: center;
         justify-content: center;
-        padding: 0;
         border: 0;
+
         &:hover {
             cursor: pointer;
             background: #53545b;
         }
-    }
-
-    hr {
-        border-top: 1px solid #53545b;
-        width: 35px;
     }
 }
 
@@ -538,10 +542,8 @@
 }
 
 .activity-feed-column {
-    width: 275px;
-    flex-shrink: 0;
+    width: 24%;
     height: 100%;
-
     overflow-y: scroll;
 
     &::-webkit-scrollbar {
@@ -566,10 +568,8 @@
 
 // Chat Screen
 .viewer-list-column {
-    width: 225px;
-    flex-shrink: 0;
+    width: 21%;
     height: 100%;
-
     overflow-y: scroll;
 
     &::-webkit-scrollbar {
@@ -621,7 +621,7 @@
 .chat-window-column {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 50%;
     height: 100%;
     padding-bottom: 10px;
     background: adjust-color($light-background-color, $red: 15, $green: 15, $blue: 15);
